--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,15 +61,23 @@ dependencies {
 
     implementation("androidx.annotation:annotation:1.3.0")
 
-    // Tests
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     // Room
     implementation("androidx.room:room-runtime:$room_version")
     // To use Kotlin annotation processing tool (kapt)
     kapt("androidx.room:room-compiler:$room_version")
     // Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:$room_version")
+
+    // Tests
+    // Junit
+    // Junit
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    // Mockito
+    testImplementation'org.mockito:mockito-core:4.0.0'
+    testImplementation'org.mockito.kotlin:mockito-kotlin:4.0.0'
+    // Espresso
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0')
+    androidTestImplementation('androidx.test:runner:1.4.0')
+    androidTestImplementation('androidx.test:rules:1.4.0')
 }
