--- a/data/build.gradle
+++ b/data/build.gradle
@@ -65,7 +65,9 @@ dependencies {
     // GSON
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    // Junit
     testImplementation 'junit:junit:4.13.2'
+    testImplementation'org.junit.jupiter:junit-jupiter:5.8.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
